changes in soloporject3

--- a/javascript/soloproject-3/index.html
+++ b/javascript/soloproject-3/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="box-2">
             <div class="btns">
-                <button class="btn" id="btn-1">Wash Car: $10</button>
+                <button class="btn" id="btn-1" data-id="fasf">Wash Car: $10</button>
                 <button class="btn" id="btn-2">Mow Lawn: $20</button>
                 <button class="btn" id="btn-3">Pull Weeds: $30</button>
             </div>
